Added proper text

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<header id="showcase">
 		<img src="images/sacrats.png" alt="sacrats" id="logo">
 		<h1>Southern Alameda Country Radio Controllers</h1>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, ab. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia enim nobis ut voluptatem cumque! Consequuntur unde maxime harum magni velit.</p>
+		<p>COVID Restriction are in place, only a maximum 10 pilots on the field, additional pilots wait in the parking area. Masks and distancing are required.</p>
 		<a href="sacrats_05-21.pdf" class="button">Newsletter</a>
 	</header>
 	<section id="section-a">
