--- a/main.html
+++ b/main.html
@@ -13,10 +13,11 @@
 		<img src="images/sacrats.png" alt="sacrats" id="logo">
 		<h1>Southern Alameda Country Radio Controllers</h1>
 		<p>COVID Restriction are in place, only a maximum 10 pilots on the field, additional pilots wait in the parking area. Masks and distancing are required.</p>
-		<a href="sacrats_05-21.pdf" class="button">Newsletter</a>
+		<a href="files/sacrats_05-21.pdf" class="button">Newsletter</a>
 	</header>
-	<section id="section-a">
-		<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam perspiciatis aut, corrupti nihil repellat ratione. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora blanditiis quisquam assumenda, velit sunt et magni, ipsa suscipit iste doloremque laboriosam corrupti reiciendis quibusdam sequi, quo nemo distinctio maxime obcaecati. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam ratione non cupiditate asperiores, et molestias rem, tempora laborum perspiciatis quidem quas id fugiat. Consequatur nam soluta ratione fugiat delectus deleniti.</p>
+	<section>
+		<p>Please be aware that the club restricts turbine. We follow the AMA Sound Guidelines, found here:</p>
+		<a href="files/927.pdf" class="button">AMA Sound/Noise Abatement</a>
 	</section>
 </body>
 </html>
