Added another section to main

--- a/main.html
+++ b/main.html
@@ -1,3 +1,5 @@
+<!-- Manavjot Singh [07/1/2021]-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,12 +14,24 @@
 	<header id="showcase">
 		<img src="images/sacrats.png" alt="sacrats" id="logo">
 		<h1>Southern Alameda Country Radio Controllers</h1>
-		<p>COVID Restriction are in place, only a maximum 10 pilots on the field, additional pilots wait in the parking area. Masks and distancing are required.</p>
+		<p>COVID Restriction are in place, only a maximum of 10 pilots are allowed on the field, additional pilots must wait in the parking area. Masks and social distancing are required.</p>
 		<a href="files/sacrats_05-21.pdf" class="button">Newsletter</a>
 	</header>
-	<section>
-		<p>Please be aware that the club restricts turbine. We follow the AMA Sound Guidelines, found here:</p>
-		<a href="files/927.pdf" class="button">AMA Sound/Noise Abatement</a>
-	</section>
+	<div class="info">
+		<section id="section_a">
+			<p>Please be aware that the club restricts turbine. We follow the AMA Sound Guidelines, found here:</p>
+			<a href="files/927.pdf" class="button">AMA Sound/Noise Abatement</a>
+		</section>
+		<section id="section_b">
+			<p>Prosprective club member can click the link below for more information about joining our club!</p>
+			<a href="files/927.pdf" class="button">Join</a>
+		</section>
+	</div>
+	<div>
+		<section id="section_about">
+			<p>SACRC was first incorporated in 1967 and holds AMA Club Charter #162. The Flying Field is in Union City, California, on the East Side of San Francisco Bay.</p>
+			<a href="files/927.pdf" class="button">More Info</a>
+		</section>
+	</div>
 </body>
 </html>
