Added basic nav bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
 	<link rel="icon" href="images/sacrats_sketch.png">
 	<title>SACRC</title>
 </head>
+<nav>
+	<button id="burger">&#9776;</button>
+	<button id="close_btn">&times;</button2>
+	<ul id="pages">
+		<li>
+			<a href="#">About</a>
+		</li>
+		<li>
+			<a href="#">Newsletter</a>
+		</li>
+		<li>
+			<a href="#">SACRC Rules</a>
+		</li>
+		<li>
+			<a href="#">Officers</a>
+		</li>
+		<li>
+			<a href="#">Flight Instructors</a>
+		</li>
+		<li>
+			<a href="#">Contact Us</a>
+		</li>
+	</ul>
+</nav>
 <body>
 	<header id="showcase">
 		<img src="images/sacrats.png" alt="sacrats" id="logo">
@@ -30,8 +54,9 @@
 	<div>
 		<section id="section_about">
 			<p>SACRC was first incorporated in 1967 and holds AMA Club Charter #162. The Flying Field is in Union City, California, on the East Side of San Francisco Bay.</p>
-			<a href="files/927.pdf" class="button">More Info</a>
+			<a href="#" class="button">About Our Club</a>
 		</section>
 	</div>
+	<script src="index.js"></script>
 </body>
 </html>
