Added some minor changes

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<title>SACRC</title>
 </head>
 <nav>
-	<button id="burger">&#9776;</button>
-	<button id="close_btn">&times;</button2>
+	<button class="nav_btn" id="burger">&#x2261;</button>
+	<button class="nav_btn" id="close_btn">&#x2715;</button>
 	<ul id="pages">
 		<li>
 			<a href="#">About</a>
