Added newsletter link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="index.css">
 	<link rel="icon" href="images/sacrats_sketch.png">
+	<script async src="index.js"></script>
 	<title>SACRC</title>
 </head>
 <nav>
@@ -18,7 +19,7 @@
 			<a href="#">About</a>
 		</li>
 		<li>
-			<a href="#">Newsletter</a>
+			<a href="files/sacrats_05_21.pdf">Newsletter</a>
 		</li>
 		<li>
 			<a href="#">SACRC Rules</a>
@@ -39,7 +40,7 @@
 		<img src="images/sacrats.png" alt="sacrats" id="logo">
 		<h1>Southern Alameda Country Radio Controllers</h1>
 		<p>COVID Restriction are in place, only a maximum of 10 pilots are allowed on the field, additional pilots must wait in the parking area. Masks and social distancing are required.</p>
-		<a href="files/sacrats_05-21.pdf" class="button">Newsletter</a>
+		<a href="/files/sacrats_05_21.pdf" class="button">Newsletter</a>
 	</header>
 	<div class="info">
 		<section id="section_a">
@@ -57,6 +58,5 @@
 			<a href="#" class="button">About Our Club</a>
 		</section>
 	</div>
-	<script src="index.js"></script>
 </body>
 </html>
