Added seperate nav css and js

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<header id="showcase">
 		<img src="images/sacrats.png" alt="sacrats" id="logo">
 		<h1>Southern Alameda Country Radio Controllers</h1>
-		<p>COVID Restriction are in place, only a maximum of 10 pilots are allowed on the field, additional pilots must wait in the parking area. Masks and social distancing are required.</p>
+		<p>Club meetings are at the field every second Saturday at 11:00am. COVID restriction are in place, only a maximum of 10 pilots are allowed on the field, additional pilots must wait in the parking area. Masks and social distancing are required.</p>
 		<a href="/files/sacrats_05_21.pdf" class="button">Newsletter</a>
 	</header>
 	<div class="info">
