add new nav files

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="nav.css">
 	<link rel="icon" href="images/sacrats_sketch.png">
-	<script async src="index.js"></script>
+	<script async src="nav.js"></script>
 	<title>SACRC</title>
 </head>
 <nav>
@@ -16,10 +17,10 @@
 	<button class="nav_btn" id="close_btn">&#x2715;</button>
 	<ul id="pages">
 		<li>
-			<a href="#">About</a>
+			<a href="/about.html">About</a>
 		</li>
 		<li>
-			<a href="files/sacrats_05_21.pdf">Newsletter</a>
+			<a href="/files/sacrats_05_21.pdf">Newsletter</a>
 		</li>
 		<li>
 			<a href="#">SACRC Rules</a>
