Added home link in nav bar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	<button class="nav_btn" id="burger">&#x2261;</button>
 	<button class="nav_btn" id="close_btn">&#x2715;</button>
 	<ul id="pages">
+		<li id="current_page">
+			<a href="/index.html">Home</a>
+		</li>
 		<li>
 			<a href="/about.html">About</a>
 		</li>
