--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <a href="#">Flight Instructors</a>
         </li>
         <li id="current_page">
-            <a href="#">Contact Us</a>
+            <a href="/contact.html">Contact Us</a>
         </li>
     </ul>
 </nav>
@@ -46,51 +46,63 @@
         <img src="images/sacrats.png" alt="sacrats" id="logo">
         <h1>Contact Us</h1>
     </div>
-    <div class="contacts"> 
-        <h2>Officers</h2>
-        <ul id="officers">
+    <div class="contacts">
+        <ul>
             <li>
-                <p>President</p>
+                <h3>President</h3>
                 <p>Mike Pimentel</p>
                 <p>(510) 792 - 6283</p>
                 <a href="mailto: president@sacrc.org">president@sacrc.org</a>
             </li>
             <li>
-                <p>Vice President</p>
+                <h3>Vice President</h3>
                 <p>Steve Hoyt</p>
                 <p>(510) 685 - 8358</p>
                 <a href="mailto: vp@sacrc.org">vp@sacrc.org</a>
             </li>
             <li>
-                <p>Treasurer</p>
+                <h3>Treasurer</h3>
                 <p>Jim Utley</p>
                 <p>(510) 352 - 3150</p>
                 <a href="mailto: treasurer@sacrc.org">treasurer@sacrc.org</a>
             </li>
             <li>
-                <p>Secretary</p>
+                <h3>Secretary</h3>
                 <p>John Chavez</p>
                 <p>(510) 200 - 9961</p>
                 <a href="mailto: secretary@sacrc.org">secretary@sacrc.org</a>
             </li>
-        </ul>
-        <h2>Directors</h2>
-        <ul id="directors">
             <li>
-                <p>Director At Large</p>
+                <h3>Director At Large</h3>
                 <p>Harry Kart</p>
                 <p>(650) 365 - 2404</p>
                 <a href="mailto: director1@sacrc.org">director1@sacrc.org</a>
             </li>
             <li>
-                <p>Director At Large</p>
+                <h3>Director At Large</h3>
                 <p>Jim Weiss</p>
-                <p>510) 303 - 7677</p>
+                <p>(510) 303 - 7677</p>
                 <a href="mailto: director2@sacrc.org">director2@sacrc.org</a>
             </li>
-        </ul>
-        <h2>Webmaster/Newletter Editor</h2>
-        <p>(Non-Voting Member Of Board</p>
+             <li>
+                 <h3>Webmaster</h3>
+                 <p>Jeff Whitney</p>
+                 <p>(510) 537 - 0141</p>
+                 <a href="mailto: webmaster@sacrc.org">webmaster@sacrc.org</a>
+             </li>
+             <li>
+                 <h3>Club Field Marshall</h3>
+                 <p>Brady Deitrick</p>
+                 <p>(650) 591 - 3593</p>
+                 <a href="mailto: fieldmarshal@sacrc.org">fieldmarshal@sacrc.org</a>
+             </li>
+             <li>
+                 <h3>Safety Officer</h3>
+                 <p>Burt Rosensweig</p>
+                 <p>(650) 349 - 5314</p>
+                 <a href="mailto: safety@sacrc.org">safety@sacrc.org</a>
+             </li>
+         </ul>
     </div>
 </body>
 
