--- a/contact.html
+++ b/contact.html
@@ -43,67 +43,75 @@
 
 <body>
     <div id="showcase">
-        <img src="images/sacrats.png" alt="sacrats" id="logo">
+    <img src="images/sacrats.png" alt="sacrats" id="logo">
         <h1>Contact Us</h1>
     </div>
     <div class="contacts">
         <ul>
             <li>
-                <h3>President</h3>
-                <p>Mike Pimentel</p>
-                <p>(510) 792 - 6283</p>
-                <a href="mailto: president@sacrc.org">president@sacrc.org</a>
+                <div class="joint">
+                    <h3>President</h3>
+                    <p>Mike Pimentel</p>
+                </div>
+                <a href="mailto: president@sacrc.org" class="button">president@sacrc.org</a>
             </li>
             <li>
-                <h3>Vice President</h3>
-                <p>Steve Hoyt</p>
-                <p>(510) 685 - 8358</p>
-                <a href="mailto: vp@sacrc.org">vp@sacrc.org</a>
+                <div class="joint">
+                    <h3>Vice President</h3>
+                    <p>Steve Hoyt</p>
+                </div>
+                <a href="mailto: vp@sacrc.org" class="button">vp@sacrc.org</a>
             </li>
             <li>
-                <h3>Treasurer</h3>
-                <p>Jim Utley</p>
-                <p>(510) 352 - 3150</p>
-                <a href="mailto: treasurer@sacrc.org">treasurer@sacrc.org</a>
+                <div class="joint">
+                    <h3>Treasurer</h3>
+                    <p>Jim Utley</p>
+                </div>
+                <a href="mailto: treasurer@sacrc.org" class="button">treasurer@sacrc.org</a>
             </li>
             <li>
-                <h3>Secretary</h3>
-                <p>John Chavez</p>
-                <p>(510) 200 - 9961</p>
-                <a href="mailto: secretary@sacrc.org">secretary@sacrc.org</a>
+                <div class="joint">
+                    <h3>Secretary</h3>
+                    <p>John Chavez</p>
+                </div>
+                <a href="mailto: secretary@sacrc.org" class="button">secretary@sacrc.org</a>
             </li>
             <li>
-                <h3>Director At Large</h3>
-                <p>Harry Kart</p>
-                <p>(650) 365 - 2404</p>
-                <a href="mailto: director1@sacrc.org">director1@sacrc.org</a>
+                <div class="joint">
+                    <h3>Director At Large</h3>
+                    <p>Harry Kart</p>
+                </div>
+                <a href="mailto: director1@sacrc.org" class="button">director1@sacrc.org</a>
             </li>
             <li>
-                <h3>Director At Large</h3>
-                <p>Jim Weiss</p>
-                <p>(510) 303 - 7677</p>
-                <a href="mailto: director2@sacrc.org">director2@sacrc.org</a>
+                <div class="joint">
+                    <h3>Director At Large</h3>
+                    <p>Jim Weiss</p>
+                </div>
+                <a href="mailto: director2@sacrc.org" class="button">director2@sacrc.org</a>
             </li>
              <li>
-                 <h3>Webmaster</h3>
-                 <p>Jeff Whitney</p>
-                 <p>(510) 537 - 0141</p>
-                 <a href="mailto: webmaster@sacrc.org">webmaster@sacrc.org</a>
+                 <div class="joint">
+                     <h3>Webmaster</h3>
+                     <p>Jeff Whitney</p>
+                 </div>
+                 <a href="mailto: webmaster@sacrc.org" class="button">webmaster@sacrc.org</a>
              </li>
              <li>
-                 <h3>Club Field Marshall</h3>
-                 <p>Brady Deitrick</p>
-                 <p>(650) 591 - 3593</p>
-                 <a href="mailto: fieldmarshal@sacrc.org">fieldmarshal@sacrc.org</a>
+                 <div class="joint">
+                     <h3>Club Field Marshall</h3>
+                     <p>Brady Deitrick</p>
+                 </div>
+                 <a href="mailto: fieldmarshal@sacrc.org" class="button">fieldmarshal@sacrc.org</a>
              </li>
              <li>
-                 <h3>Safety Officer</h3>
-                 <p>Burt Rosensweig</p>
-                 <p>(650) 349 - 5314</p>
-                 <a href="mailto: safety@sacrc.org">safety@sacrc.org</a>
+                 <div class="joint">
+                     <h3>Safety Officer</h3>
+                     <p>Burt Rosensweig</p>
+                 </div>
+                 <a href="mailto: safety@sacrc.org" class="button">safety@sacrc.org</a>
              </li>
          </ul>
     </div>
 </body>
-
 </html>
