Updated Nav Links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<a href="/files/sacrats_05_21.pdf">Newsletter</a>
 		</li>
 		<li>
-			<a href="#">SACRC Rules</a>
+			<a href="/files/SACRC_flying_rules_6_18_rev_9_18.pdf">SACRC Rules</a>
 		</li>
 		<li>
 			<a href="#">Officers</a>
