--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <a href="/files/sacrats_05_21.pdf">Newsletter</a>
         </li>
         <li>
-            <a href="#">SACRC Rules</a>
+            <a href="/files/SACRC_flying_rules_6_18_rev_9_18.pdf">SACRC Rules</a>
         </li>
         <li>
             <a href="#">Officers</a>
@@ -43,7 +43,7 @@
 
 <body>
     <div id="showcase">
-    <img src="images/sacrats.png" alt="sacrats" id="logo">
+        <img src="images/sacrats.png" alt="sacrats" id="logo">
         <h1>Contact Us</h1>
     </div>
     <div class="contacts">
