--- a/contact.html
+++ b/contact.html
@@ -14,31 +14,25 @@
     <title>SACRC</title>
 </head>
 <nav>
-    <button class="nav_btn" id="burger">&#x2261;</button>
-    <button class="nav_btn" id="close_btn">&#x2715;</button>
-    <ul id="pages">
-        <li>
-            <a href="/index.html">Home</a>
-        </li>
-        <li>
-            <a href="/about.html">About</a>
-        </li>
-        <li>
-            <a href="/files/sacrats_05_21.pdf">Newsletter</a>
-        </li>
-        <li>
-            <a href="/files/SACRC_flying_rules_6_18_rev_9_18.pdf">SACRC Rules</a>
-        </li>
-        <li>
-            <a href="#">Officers</a>
-        </li>
-        <li>
-            <a href="#">Flight Instructors</a>
-        </li>
-        <li id="current_page">
-            <a href="/contact.html">Contact Us</a>
-        </li>
-    </ul>
+	<button class="nav_btn" id="burger">&#x2261;</button>
+	<button class="nav_btn" id="close_btn">&#x2715;</button>
+	<ul id="pages">
+		<li id="current_page">
+			<a href="/index.html">Home</a>
+		</li>
+		<li>
+			<a href="/files/sacrats_05_21.pdf">Newsletter</a>
+		</li>
+		<li>
+			<a href="/files/SACRC_flying_rules_6_18_rev_9_18.pdf">SACRC Rules</a>
+		</li>
+		<li>
+			<a href="/files/Flight-Instructors.pdf">Flight Instructors</a>
+		</li>
+		<li>
+			<a href="/contact.html">Contact Us</a>
+		</li>
+	</ul>
 </nav>
 
 <body>
