--- a/index.html
+++ b/index.html
@@ -20,19 +20,13 @@
 			<a href="/index.html">Home</a>
 		</li>
 		<li>
-			<a href="/about.html">About</a>
-		</li>
-		<li>
 			<a href="/files/sacrats_05_21.pdf">Newsletter</a>
 		</li>
 		<li>
 			<a href="/files/SACRC_flying_rules_6_18_rev_9_18.pdf">SACRC Rules</a>
 		</li>
 		<li>
-			<a href="#">Officers</a>
-		</li>
-		<li>
-			<a href="#">Flight Instructors</a>
+			<a href="/files/Flight-Instructors.pdf">Flight Instructors</a>
 		</li>
 		<li>
 			<a href="/contact.html">Contact Us</a>
@@ -53,13 +47,12 @@
 		</section>
 		<section id="section_b">
 			<p>Prosprective club member can click the link below for more information about joining our club!</p>
-			<a href="files/927.pdf" class="button">Join</a>
+			<a href="files/2023_Application.pdf" class="button">Join</a>
 		</section>
 	</div>
 	<div>
 		<section id="section_about">
 			<p>SACRC was first incorporated in 1967 and holds AMA Club Charter #162. The Flying Field is in Union City, California, on the East Side of San Francisco Bay.</p>
-			<a href="#" class="button">About Our Club</a>
 		</section>
 	</div>
 </body>
